--- a/public/project/client/view/search/search.view.html
+++ b/public/project/client/view/search/search.view.html
@@ -2,12 +2,13 @@
     <fieldset>
         <legend>Search Results</legend>
     <search-control></search-control>
-    <div class="col-md-12" ng-controller="SearchController">
+    <div class="col-xs-12" ng-controller="SearchController">
         <ul class="pager">
             <li class="previous" ng-class="{disabled:currentPage == 0}"><a ng-click="prevPage()">&larr; Prev</a></li>
             <li class="next" ng-class="{disabled:currentPage >= numberOfPages-1}"><a ng-click="nextPage()">Next &rarr;</a></li>
         </ul>
-        <table class="table table-responsive table-striped">
+        <div class="table-responsive">
+        <table class="table table-condensed table-striped">
             <thead>
                 <tr>
                     <th>
@@ -23,9 +24,9 @@
             </thead>
             <tbody>
                 <tr ng-repeat="playlist in playlists | startFrom:currentPage * pageSize | limitTo: pageSize">
-                    <td class="valign">{{playlist.title}}</td>
-                    <td class="valign">{{playlist.user.username}}</td>
-                    <td class="nowrap">
+                    <td class="valign col-xs-4 wrapcontent">{{playlist.title}}</td>
+                    <td class="valign col-xs-4 wrapcontent">{{playlist.user.username}}</td>
+                    <td class="nowrap col-xs-4 valign">
                         <button class="fa fa-2x fa-play-circle btn btn-success" ng-click="play(playlist)"></button>
                         &nbsp;
                         <button class="fa fa-2x fa-thumbs-up btn btn-success" ng-click="addToMyPlaylists(playlist)" ng-if="user"></button>
@@ -33,6 +34,7 @@
                 </tr>
             </tbody>
         </table>
+        </div>
     </div>
     </fieldset>
 </div>
