--- a/public/project/client/view/admin/admin.view.html
+++ b/public/project/client/view/admin/admin.view.html
@@ -3,7 +3,7 @@
         <legend>
             Users
         </legend>
-        <div class="table-responsive">
+        <div class="container">
             <div class="form-group">
                 <input type="search" class="form-control" placeholder="Type a username to filter records" ng-model="usernameFilter">
             </div>
@@ -11,7 +11,8 @@
                 <li class="previous" ng-class="{disabled:currentPage == 0}"><a ng-click="prevPage()">&larr; Prev</a></li>
                 <li class="next" ng-class="{disabled:currentPage >= numberOfPages-1}"><a ng-click="nextPage()">Next &rarr;</a></li>
             </ul>
-            <table class="table table-striped">
+            <div class="table-responsive">
+            <table class="table table-condensed table-striped">
                 <thead>
                 <tr>
                     <th class="nowrap">
@@ -52,7 +53,6 @@
                     <td class="valign"><input type="text" placeholder="First Name" class="form-control table-input" ng-model="t_user.firstName"/></td>
                     <td class="valign"><input type="text" placeholder="Last Name" class="form-control table-input" ng-model="t_user.lastName"/></td>
                     <td>
-                        <!--<input type="text" placeholder="Role1,Role2" class="form-control table-input" ng-model="t_user.roles"/>-->
                         <input type="checkbox" ng-model="t_user.isAdmin" class="form-control table-input">
                     </td>
                     <td class="table-content-nowrap nowrap">
@@ -66,14 +66,14 @@
                 </thead>
                 <tbody>
                 <tr ng-repeat="u in users | orderBy: sort.descending+sort.column | filter: usernameFilter| startFrom:currentPage * pageSize | limitTo: pageSize">
-                    <td class="valign">{{u.username}}</td>
-                    <td class="valign"><span class="sr-only">{{u.password}}</span></td>
-                    <td class="valign">{{u.firstName}}</td>
-                    <td class="valign">{{u.lastName}}</td>
-                    <td class="valign">
+                    <td class="valign col-xs-2">{{u.username}}</td>
+                    <td class="valign col-xs-2"><span class="sr-only">{{u.password}}</span></td>
+                    <td class="valign col-xs-2">{{u.firstName}}</td>
+                    <td class="valign col-xs-2">{{u.lastName}}</td>
+                    <td class="valign col-xs-2">
                         <input type="checkbox" ng-checked="u.roles.indexOf('admin')>=0" class="form-control table-input" disabled>
                     </td>
-                    <td class="nowrap">
+                    <td class="nowrap col-xs-2">
                         <a ng-click="removeUser(u)" class="fa fa-2x fa-trash-o  btn btn-success">
                         </a>
                         &nbsp;
@@ -83,6 +83,7 @@
                 </tr>
                 </tbody>
             </table>
+            </div>
         </div>
     </fieldset>
 </div>
