--- a/public/project/client/view/playlist/myplaylist.view.html
+++ b/public/project/client/view/playlist/myplaylist.view.html
@@ -15,7 +15,8 @@
             <li class="previous" ng-class="{disabled:currentPage == 0}"><a ng-click="prevPage()">&larr; Prev</a></li>
             <li class="next" ng-class="{disabled:currentPage >= numberOfPages-1}"><a ng-click="nextPage()">Next &rarr;</a></li>
         </ul>
-        <table class="table table-responsive table-striped">
+        <div class="table-responsive">
+        <table class="table table-condensed table-striped">
             <thead>
             <tr>
                 <th>
@@ -28,10 +29,10 @@
             </thead>
             <tbody>
                 <tr ng-repeat="playlist in playlists | startFrom: currentPage * pageSize  | limitTo: pageSize">
-                    <td class="valign">
+                    <td class="valign col-xs-8 wrapcontent">
                         <a ng-click="viewPlaylistDetails(playlist)" class="hand">{{playlist.playlistName}}</a>
                     </td>
-                    <td class="nowrap">
+                    <td class="nowrap col-xs-4 valign">
                         <button class="fa fa-2x fa-play-circle btn btn-success" ng-click="playPlaylist(playlist)"></button>
                         &nbsp;
                         <button class="fa fa-2x fa-thumbs-down btn btn-success" ng-click="deletePlaylist(playlist)"></button>
@@ -39,6 +40,7 @@
                 </tr>
             </tbody>
         </table>
+        </div>
     </div>
     </fieldset>
 </div>
