--- a/public/project/client/view/user/login.view.html
+++ b/public/project/client/view/user/login.view.html
@@ -5,13 +5,13 @@
         <div class="form-group">
             <label for="inputUsername" class="col-lg-2 control-label">Username</label>
             <div class="col-lg-10">
-                <input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="user.username">
+                <input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="user.username" required>
             </div>
         </div>
         <div class="form-group">
             <label for="inputPassword" class="col-lg-2 control-label">Password</label>
             <div class="col-lg-10">
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="user.password">
+                <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="user.password" required>
                 <span class="label label-danger" ng-show="wrongpassword"><strong>Invalid Credentials!</strong> Please try again.</span>
             </div>
         </div>
