Using ControllerAs (vm) instead of $scope.

--- a/public/project/client/view/playlist/myplaylist.view.html
+++ b/public/project/client/view/playlist/myplaylist.view.html
@@ -3,17 +3,17 @@
         <legend>Liked Playlists</legend>
         <h6>Search to Add Playlists</h6>
         <search-control></search-control>
-        <div class="col-md-12" ng-if="noplaylists">
+        <div class="col-md-12" ng-if="model.noplaylists">
             <div class="alert alert-dismissible alert-danger" >
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                 <strong>Sorry!</strong>&nbsp;It seems you don't have any playlists.
                 Get started by searching for a playlist above.
             </div>
         </div>
-    <div class="col-md-12" ng-if="!(noplaylists)">
+    <div class="col-md-12" ng-if="!(model.noplaylists)">
         <ul class="pager">
-            <li class="previous" ng-class="{disabled:currentPage == 0}"><a ng-click="prevPage()">&larr; Prev</a></li>
-            <li class="next" ng-class="{disabled:currentPage >= numberOfPages-1}"><a ng-click="nextPage()">Next &rarr;</a></li>
+            <li class="previous" ng-class="{disabled:model.currentPage == 0}"><a ng-click="model.prevPage()">&larr; Prev</a></li>
+            <li class="next" ng-class="{disabled:model.currentPage >= model.numberOfPages-1}"><a ng-click="model.nextPage()">Next &rarr;</a></li>
         </ul>
         <div class="table-responsive">
         <table class="table table-condensed table-striped">
@@ -28,14 +28,14 @@
             </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="playlist in playlists | startFrom: currentPage * pageSize  | limitTo: pageSize">
+                <tr ng-repeat="playlist in model.playlists | startFrom: model.currentPage * model.pageSize  | limitTo: model.pageSize">
                     <td class="valign col-xs-8 wrapcontent">
-                        <a ng-click="viewPlaylistDetails(playlist)" class="hand">{{playlist.playlistName}}</a>
+                        <a ng-click="model.viewPlaylistDetails(playlist)" class="hand">{{playlist.playlistName}}</a>
                     </td>
                     <td class="nowrap col-xs-4 valign">
-                        <button class="fa fa-2x fa-play-circle btn btn-success" ng-click="playPlaylist(playlist)"></button>
+                        <button class="fa fa-2x fa-play-circle btn btn-success" ng-click="model.playPlaylist(playlist)"></button>
                         &nbsp;
-                        <button class="fa fa-2x fa-thumbs-down btn btn-success" ng-click="deletePlaylist(playlist)"></button>
+                        <button class="fa fa-2x fa-thumbs-down btn btn-success" ng-click="model.deletePlaylist(playlist)"></button>
                     </td>
                 </tr>
             </tbody>
