--- a/public/project/client/view/playlist/soundcloudplaylists.view.html
+++ b/public/project/client/view/playlist/soundcloudplaylists.view.html
@@ -1,15 +1,15 @@
 <div class="container" ng-controller="SoundCloudPlaylistController" ng-if="user.soundCloud.id">
     <fieldset>
         <legend>My SoundCloud Playlists</legend>
-        <div class="alert alert-dismissible alert-danger" ng-if="nosongs">
+        <div class="alert alert-dismissible alert-danger" ng-if="model.nosongs">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
             <strong>Oh snap!</strong>It seems you don't have any playlists with songs.
             <a href="https://soundcloud.com" class="alert-link" target="_blank">Create a playlist and add songs to it in SoundCloud</a> and try again.
         </div>
-        <div class="col-md-12" ng-if="!nosongs">
+        <div class="col-md-12" ng-if="!model.nosongs">
             <ul class="pager">
-                <li class="previous" ng-class="{disabled:currentPage == 0}"><a ng-click="prevPage()">&larr; Prev</a></li>
-                <li class="next" ng-class="{disabled:currentPage >= numberOfPages-1}"><a ng-click="nextPage()">Next &rarr;</a></li>
+                <li class="previous" ng-class="{disabled:model.currentPage == 0}"><a ng-click="model.prevPage()">&larr; Prev</a></li>
+                <li class="next" ng-class="{disabled:model.currentPage >= model.numberOfPages-1}"><a ng-click="model.nextPage()">Next &rarr;</a></li>
             </ul>
             <div class="table-responsive">
             <table class="table table-condensed table-striped">
@@ -24,12 +24,12 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="playlist in playlists | startFrom: currentPage * pageSize  | limitTo: pageSize">
+                <tr ng-repeat="playlist in model.playlists | startFrom: model.currentPage * model.pageSize  | limitTo: model.pageSize">
                     <td class="valign col-xs-8 wrapcontent">
-                        <a ng-click="viewPlaylistDetails(playlist)" class="hand">{{playlist.title}}</a>
+                        <a ng-click="model.viewPlaylistDetails(playlist)" class="hand">{{playlist.title}}</a>
                     </td>
                     <td class="nowrap col-xs-4 valign">
-                        <button class="fa fa-2x fa-play-circle btn btn-success" ng-click="play(playlist)"></button>
+                        <button class="fa fa-2x fa-play-circle btn btn-success" ng-click="model.play(playlist)"></button>
                     </td>
                 </tr>
                 </tbody>
