--- a/public/project/client/view/admin/admin.view.html
+++ b/public/project/client/view/admin/admin.view.html
@@ -5,33 +5,33 @@
         </legend>
         <div class="container">
             <div class="form-group">
-                <input type="search" class="form-control" placeholder="Type a username to filter records" ng-model="usernameFilter">
+                <input type="search" class="form-control" placeholder="Type a username to filter records" ng-model="model.usernameFilter">
             </div>
             <ul class="pager">
-                <li class="previous" ng-class="{disabled:currentPage == 0}"><a ng-click="prevPage()">&larr; Prev</a></li>
-                <li class="next" ng-class="{disabled:currentPage >= numberOfPages-1}"><a ng-click="nextPage()">Next &rarr;</a></li>
+                <li class="previous" ng-class="{disabled:model.currentPage == 0}"><a ng-click="model.prevPage()">&larr; Prev</a></li>
+                <li class="next" ng-class="{disabled:model.currentPage >= model.numberOfPages-1}"><a ng-click="model.nextPage()">Next &rarr;</a></li>
             </ul>
             <div class="table-responsive">
             <table class="table table-condensed table-striped">
                 <thead>
                 <tr>
                     <th class="nowrap">
-                        <span class="glyphicon glyphicon-triangle-top sort-glyphicon" ng-if="selectedClsAscending('username')"></span>
-                    <span class="glyphicon glyphicon-triangle-bottom sort-glyphicon" ng-if="selectedClsDescending('username')">
-                    </span>&nbsp;<a ng-click="changeSorting('username')" class="hand">Username</a>
+                        <span class="glyphicon glyphicon-triangle-top sort-glyphicon" ng-if="model.selectedClsAscending('username')"></span>
+                    <span class="glyphicon glyphicon-triangle-bottom sort-glyphicon" ng-if="model.selectedClsDescending('username')">
+                    </span>&nbsp;<a ng-click="model.changeSorting('username')" class="hand">Username</a>
                     </th>
                     <th class="nowrap">
                         &nbsp;Password
                     </th>
                     <th class="nowrap">
-                        <span class="glyphicon glyphicon-triangle-top sort-glyphicon" ng-if="selectedClsAscending('firstName')"></span>
-                    <span class="glyphicon glyphicon-triangle-bottom sort-glyphicon" ng-if="selectedClsDescending('firstName')">
-                    </span>&nbsp;<a ng-click="changeSorting('firstName')" class="hand">First Name</a>
+                        <span class="glyphicon glyphicon-triangle-top sort-glyphicon" ng-if="model.selectedClsAscending('firstName')"></span>
+                    <span class="glyphicon glyphicon-triangle-bottom sort-glyphicon" ng-if="model.selectedClsDescending('firstName')">
+                    </span>&nbsp;<a ng-click="model.changeSorting('firstName')" class="hand">First Name</a>
                     </th>
                     <th class="nowrap">
-                        <span class="glyphicon glyphicon-triangle-top sort-glyphicon" ng-if="selectedClsAscending('lastName')"></span>
-                    <span class="glyphicon glyphicon-triangle-bottom sort-glyphicon" ng-if="selectedClsDescending('lastName')">
-                    </span>&nbsp;<a ng-click="changeSorting('lastName')" class="hand">Last Name</a>
+                        <span class="glyphicon glyphicon-triangle-top sort-glyphicon" ng-if="model.selectedClsAscending('lastName')"></span>
+                    <span class="glyphicon glyphicon-triangle-bottom sort-glyphicon" ng-if="model.selectedClsDescending('lastName')">
+                    </span>&nbsp;<a ng-click="model.changeSorting('lastName')" class="hand">Last Name</a>
                     </th>
                     <th>
                         Admin
@@ -46,26 +46,26 @@
                                id="usernameTable"
                                placeholder="Username"
                                class="form-control table-input"
-                               ng-model="t_user.username"
+                               ng-model="model.t_user.username"
                         />
                     </td>
-                    <td class="valign"><input type="password" placeholder="Password" class="form-control table-input" ng-model="t_user.password"/></td>
-                    <td class="valign"><input type="text" placeholder="First Name" class="form-control table-input" ng-model="t_user.firstName"/></td>
-                    <td class="valign"><input type="text" placeholder="Last Name" class="form-control table-input" ng-model="t_user.lastName"/></td>
+                    <td class="valign"><input type="password" placeholder="Password" class="form-control table-input" ng-model="model.t_user.password"/></td>
+                    <td class="valign"><input type="text" placeholder="First Name" class="form-control table-input" ng-model="model.t_user.firstName"/></td>
+                    <td class="valign"><input type="text" placeholder="Last Name" class="form-control table-input" ng-model="model.t_user.lastName"/></td>
                     <td>
-                        <input type="checkbox" ng-model="t_user.isAdmin" class="form-control table-input">
+                        <input type="checkbox" ng-model="model.t_user.isAdmin" class="form-control table-input">
                     </td>
                     <td class="table-content-nowrap nowrap">
-                        <a ng-click="addUser(t_user)" class="fa fa-2x fa-plus-square btn btn-success">
+                        <a ng-click="model.addUser(model.t_user)" class="fa fa-2x fa-plus-square btn btn-success">
                         </a>
                         &nbsp;
-                        <a ng-click="updateUser(t_user)" class="fa fa-2x fa-check-square btn btn-success">
+                        <a ng-click="model.updateUser(model.t_user)" class="fa fa-2x fa-check-square btn btn-success">
                         </a>
                     </td>
                 </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="u in users | orderBy: sort.descending+sort.column | filter: usernameFilter| startFrom:currentPage * pageSize | limitTo: pageSize">
+                <tr ng-repeat="u in model.users | orderBy: model.sort.descending+model.sort.column | filter: model.usernameFilter| startFrom:model.currentPage * model.pageSize | limitTo: model.pageSize">
                     <td class="valign col-xs-2">{{u.username}}</td>
                     <td class="valign col-xs-2"><span class="sr-only">{{u.password}}</span></td>
                     <td class="valign col-xs-2">{{u.firstName}}</td>
@@ -74,10 +74,10 @@
                         <input type="checkbox" ng-checked="u.roles.indexOf('admin')>=0" class="form-control table-input" disabled>
                     </td>
                     <td class="nowrap col-xs-2">
-                        <a ng-click="removeUser(u)" class="fa fa-2x fa-trash-o  btn btn-success">
+                        <a ng-click="model.removeUser(u)" class="fa fa-2x fa-trash-o  btn btn-success">
                         </a>
                         &nbsp;
-                        <a ng-click="selectUser(u)" class="fa fa-2x fa-pencil-square-o btn btn-success">
+                        <a ng-click="model.selectUser(u)" class="fa fa-2x fa-pencil-square-o btn btn-success">
                         </a>
                     </td>
                 </tr>
