--- a/public/project/client/view/playlist/playlistdetails.view.html
+++ b/public/project/client/view/playlist/playlistdetails.view.html
@@ -2,16 +2,16 @@
     <!-- Nav tabs -->
     <fieldset>
         <legend>
-            All Tracks in {{playlist.playlistName}}
+            All Tracks in {{model.playlist.playlistName}}
         </legend>
     <div class="tab-pane">
-        <button class="fa fa-2x fa-play-circle btn btn-success pull-right" ng-click="playPlaylist(playlist)"></button>
+        <button class="fa fa-2x fa-play-circle btn btn-success pull-right" ng-click="model.playPlaylist(model.playlist)"></button>
         <div class="col-md-12">
             <div class="myrow"></div>
-            <div id="details" ng-if="playlist">
+            <div id="details" ng-if="model.playlist">
                 <ul class="pager">
-                    <li class="previous" ng-class="{disabled:currentPage == 0}"><a ng-click="prevPage()">&larr; Prev</a></li>
-                    <li class="next" ng-class="{disabled:currentPage >= numberOfPages-1}"><a ng-click="nextPage()">Next &rarr;</a></li>
+                    <li class="previous" ng-class="{disabled:model.currentPage == 0}"><a ng-click="model.prevPage()">&larr; Prev</a></li>
+                    <li class="next" ng-class="{disabled:model.currentPage >= model.numberOfPages-1}"><a ng-click="model.nextPage()">Next &rarr;</a></li>
                 </ul>
                 <div class="table-responsive">
                 <table class="table table-striped">
@@ -26,7 +26,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr ng-repeat="song in songs | startFrom:currentPage*pageSize | limitTo: pageSize">
+                    <tr ng-repeat="song in model.songs | startFrom:model.currentPage*model.pageSize | limitTo: model.pageSize">
                         <td class="col-xs-6 valign wrapcontent">
                             {{song.title}}
                         </td>
