--- a/public/project/client/view/user/login.view.html
+++ b/public/project/client/view/user/login.view.html
@@ -5,20 +5,20 @@
         <div class="form-group">
             <label for="inputUsername" class="col-lg-2 control-label">Username</label>
             <div class="col-lg-10">
-                <input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="user.username" required>
+                <input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="model.user.username" required>
             </div>
         </div>
         <div class="form-group">
             <label for="inputPassword" class="col-lg-2 control-label">Password</label>
             <div class="col-lg-10">
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="user.password" required>
-                <span class="label label-danger" ng-show="wrongpassword"><strong>Invalid Credentials!</strong> Please try again.</span>
+                <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="model.user.password" required>
+                <span class="label label-danger" ng-show="model.wrongpassword"><strong>Invalid Credentials!</strong> Please try again.</span>
             </div>
         </div>
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
                 <a href="/auth/soundcloud" class="btn btn-success">Login with&nbsp;<i class="fa fa-soundcloud"></i> </a>
-                <button type="submit" class="btn btn-primary" ng-click="login(user)">Login</button>
+                <button type="submit" class="btn btn-primary" ng-click="model.login(model.user)">Login</button>
             </div>
         </div>
     </fieldset>
