--- a/public/project/client/view/user/profile.view.html
+++ b/public/project/client/view/user/profile.view.html
@@ -14,37 +14,37 @@
             <div class="form-group">
                 <label for="inputUsername" class="col-lg-2 col-md-2 col-sm-2 control-label">Username</label>
                 <div class="col-lg-4 col-md-4 col-sm-6">
-                    <input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="u.username" readonly>
+                    <input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="model.u.username" readonly>
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputPassword" class="col-lg-2 col-md-2 col-sm-2 control-label">Password</label>
                 <div class="col-lg-4 col-md-4 col-sm-6">
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="u.password" ng-disabled="!(user.username)">
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="model.u.password" ng-disabled="!(model.u.username)">
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputEmail" class="col-lg-2 col-md-2 col-sm-2 control-label">Email</label>
                 <div class="col-lg-4 col-md-4 col-sm-6">
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="u.email">
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="model.u.email">
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputFirstName" class="col-lg-2 col-md-2 col-sm-2 control-label">First Name</label>
                 <div class="col-lg-4 col-md-4 col-sm-6">
-                    <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" ng-model="u.firstName">
+                    <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" ng-model="model.u.firstName">
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputLastName" class="col-lg-2 col-md-2 col-sm-2 control-label">Last Name</label>
                 <div class="col-lg-4 col-md-4 col-sm-6">
-                    <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" ng-model="u.lastName">
+                    <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" ng-model="model.u.lastName">
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-lg-4 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-md-4 col-sm-6">
-                    <button type="submit" class="btn btn-success btn-block" ng-click="updateProfile(u)">Update</button>
+                    <button type="submit" class="btn btn-success btn-block" ng-click="model.updateProfile(model.u)">Update</button>
                 </div>
             </div>
         </fieldset>
